--- a/01.html
+++ b/01.html
@@ -75,10 +75,11 @@
         <img src="" alt="" />
       </header>
       <section>
-        <h1></h1>
-        <img src="" alt="" />
+        <h1>Dr.doom</h1>
+        <img src="./jif/Dr.doom.jpg" alt="" />
         <p>
-         
+          ชื่อจริงของ Doctor Doom ก็คือ Victor Von Doom เราเห็นเขาใส่หน้ากากเหล็กสีเงินรวมถึงผ้าคลุมสีเขียวที่เป็นเอกลักษณ์
+           นอกจากนี้ Doctor Doom ยังเป็นผู้ปกครองประเทศ Latveria ซึ่งอยู่ในยุโรปตะวันออกอีกด้วย
         </p>
       </section>
       <aside>
