--- a/03.html
+++ b/03.html
@@ -75,10 +75,10 @@
         <img src="" alt="" />
       </header>
       <section>
-        <h1></h1>
-        <img src="" alt="" />
+        <h1>Amethyst</h1>
+        <img src="./jif/Amethyst.jpg" alt="" />
         <p>
-         
+          ชื่อจริงAmy Winston สาว 20ในโลก gemworld (13 ในโลกมนุษย์) คำว่าอมิธิสในถูกนำไปใช้เป็นตัวแทนเพชรพลอยประจำราศีกุมนะครับที่เราชอบเจอใช้ควอทสีม่วงแทนราศีครับ
         </p>
       </section>
       <aside>
