--- a/04.html
+++ b/04.html
@@ -75,10 +75,12 @@
         <img src="" alt="" />
       </header>
       <section>
-        <h1></h1>
-        <img src="" alt="" />
+        <h1>Dormammu</h1>
+        <img src="./jif/Dormammu.jpg" alt="" />
         <p>
-         
+          ในคอมมิค Dormammu เป็นศัตรูคู่อริที่ร้ายกาจอันดับหนึ่งของ Doctor Strange ที่มีเปลวไฟอยู่ที่หัว
+           เขาเป็นผู้ปกครองอาณาจักร Dark Dimension ที่มีพลังเวทมนต์มากมาย และใช้พลังอำนาจของเขา
+           เพื่อที่จะยึดครองจักรวาลอื่นๆและมิติอื่นๆ
         </p>
       </section>
       <aside>
