--- a/07.html
+++ b/07.html
@@ -75,10 +75,14 @@
         <img src="" alt="" />
       </header>
       <section>
-        <h1></h1>
-        <img src="" alt="" />
+        <h1>Sandman</h1>
+        <img src="./jif/Sandman.jpg" alt="" />
         <p>
-         
+          Baker เกิดและโตในกลางเมืองนิวยอร์ก ในพื้นที่ที่ค่อนข้างจะยากจน ซึ่งพ่อของเขานั้นทิ้งเขาและแม่ 
+          ไป ตอนที่เขาเพียงอายุแค่ 3 ขวบ และด้วยสภาพแวดล้อมอย่างนั้น ทำให้เขาเรียนรู้ที่จะเอาตัวรอดด้วยวิธีต่างๆ 
+          โดยการขโมยของ ซึ่งในวัยเด็กเขานั้นเก่งฟุตบอลมาก แต่ก็หมดโอกาสที่จะไปเรียนต่อยังวิทยาลัยอาชีพ 
+          เพราะเขาดันไปล้มบอลโดยการรับเงินมาซึ่งเขาถูกจับได้และโดนไล่ออก ซึ่งทำให้เขาตัดสินใจเป็นหัวขโมยไปเลย 
+          โดยใช้ชื่อว่า Flint Marko
         </p>
       </section>
       <aside>
