--- a/08.html
+++ b/08.html
@@ -75,10 +75,10 @@
         <img src="" alt="" />
       </header>
       <section>
-        <h1></h1>
-        <img src="" alt="" />
+        <h1>>Green arrow</h1>
+        <img src="./jif/Green arrow.jpg" alt="" />
         <p>
-         
+          เเต่ในเบื้องหลังนั้น เค้าคือ “Green Arrow” ยอดนักธนูผู้ออกปราบเหล่าอาชญากรในชุดสีเขียวคล้ายกับโรบินฮู้ด
         </p>
       </section>
       <aside>
