--- a/09.html
+++ b/09.html
@@ -75,10 +75,13 @@
         <img src="" alt="" />
       </header>
       <section>
-        <h1></h1>
-        <img src="" alt="" />
+        <h1>DeathStoke</h1>
+        <img src="./jif/DeathStoke.png" alt="" />
         <p>
-         
+          ในวัย 16 ปี “Slade Wilson” สามารถเข้าสู่กองทัพของสหรัฐด้วยการโกหกอายุตัวเอง จนได้รับการเลื่อนยศเป็นพันตรี สเล้ดได้พบกับ
+           “Adeline Kane” หญิงสาวผู้ควบคุมดูเเลการฝึกฝนทหารด้วยหลักสูตรใหม่ในเวียดนาม เธอทึ้งในความสามารถของสเล้ดเเละได้ตกหลุมรักกันในเวลาต่อมา 
+           ทั้งนี้ยังอยู่ร่วมกันเเละคอยสนับสนุนจนสเล้ดได้เป็นนายพลเเละเเต่งงานกันในที่สุด 
+          จนเมื่อสงครามเวียดนามที่บานปลายอยู่เกิดปะทุขึ้น เป็นเวลาเดียวกันกับที่ภรรยาของเค้าคลอดลูกชายคนแรกชื่อ “Grant Wilson” 
         </p>
       </section>
       <aside>
