--- a/10.html
+++ b/10.html
@@ -75,10 +75,11 @@
         <img src="" alt="" />
       </header>
       <section>
-        <h1></h1>
-        <img src="" alt="" />
+        <h1>Deadpool</h1>
+        <img src="./jif/Deadpool.jpg" alt="" />
         <p>
-         
+          นับจากนี้ถึงช่วงปี 2020 เราคงได้มีโอกาสพบเจอเหล่าซูเปอร์ฮีโร่ทั้งจากฝั่ง Marvel และ DC มาประชันโฉมหน้ากันอย่างไม่ขาดหน้าขาดตา
+           ซึ่งจะเห็นได้ว่าเอาแค่ปัจจุบัน ก็มีข่าวคราวจากหลากหลายคอมมิคเรื่องดังที่ถูกนำมาสร้างเป็นฉบับภาพยนตร์และ ซีรีย์คนแสดงกันให้คึกครื้นกัน 
         </p>
       </section>
       <aside>
