--- a/0.html
+++ b/0.html
@@ -75,8 +75,8 @@
         <img src="" alt="" />
       </header>
       <section>
-        <h1></h1>
-        <img src="" alt="" />
+        <h1>นางสาว รัตนาพร มะโนปิน</h1>
+        <img src="./jif/0.jpg" alt="" />
         <p>
          
         </p>
