--- a/02.html
+++ b/02.html
@@ -75,10 +75,10 @@
         <img src="" alt="" />
       </header>
       <section>
-        <h1></h1>
-        <img src="" alt="" />
+        <h1>Michael Demiurgos</h1>
+        <img src="./jif/Michael Demiurgos.png" alt="" />
         <p>
-         
+          พี่น้องกับ ลูซิเฟอร์ มอนิ่งสตาร์ อยู่ในตระกูลเทพ แต่ไม่ตกสวรรค์อย่างลูซิเฟอร์ ถือว่าเป็นเทพที่เก่งที่สุดตนหนึ่งรองจาก พวก zeus
         </p>
       </section>
       <aside>
