--- a/06.html
+++ b/06.html
@@ -75,10 +75,13 @@
         <img src="" alt="" />
       </header>
       <section>
-        <h1></h1>
-        <img src="" alt="" />
+        <h1>Galactus</h1>
+        <img src="./jif/Galactus.png" alt="" />
         <p>
-         
+          มีนักสำรวจอวกาสจากดาวเคราะห์ Taa คนหนึ่งชื่อ Galan ที่ได้รับมอบหมายหน้าที่ในการหาวิธีในชาว Taa
+           นั้นรอดพ้นจากการทำลายล้างหมู่นี้ เขาได้เสนอวิธีพลีชีพตัวเองด้วยการขับยานอวกาสเข้าชนศูนย์กลางของจักรวาล 
+           แต่ผลกลับไม่เป็นดั่งที่เขาคาดไว้ ทุกคนในจักรวาลตายหมดยกเว้นเขาที่รอดอยู่คนเดียว แถมได้พลังใหม่เพิ่มมาจาก
+           รังสีที่จักรวาลปล่อยออกมาใส่ในตัวเขา
         </p>
       </section>
       <aside>
